# whatsapp-rpc

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.web  README.md  cli.js  docker-compose.yml  go.mod  go.sum  package.json  schema.json
.github/workflows/: ci.yml  docker-test.yml  github-packages.yml  npm-publish.yml  release.yml
configs/: config.yaml
docs/: API.md
examples/android/: pubspec.yaml
examples/android/android/app/: build.gradle.kts
examples/android/android/app/src/main/: AndroidManifest.xml
examples/android/android/app/src/main/kotlin/com/edgymeow/app/: MainActivity.kt
examples/android/lib/: app_state.dart  dashboard_tab.dart  main.dart  messages_tab.dart  rpc_client.dart  send_tab.dart
scripts/: clean.cjs  cli.js  download-binary.js
src/go/cmd/server/: main.go
src/go/config/: config.go
src/go/rpc/: rpc.go  server.go
src/go/whatsapp/: history.go  messages.go  service.go  types.go
src/python/: README.md  pyproject.toml
src/python/edgymeow/: __init__.py
src/python/whatsapp_rpc/: __init__.py  client.py
web/: app.py  requirements.txt
web/static/: openapi.yaml
web/templates/: base.html  contacts.html  dashboard.html  groups.html  messages.html  messaging.html  send.html  settings.html
