[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgymeow"
version = "0.0.16"
description = "Python async client for EdgyMeow WebSocket API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Rohit G", email = "trohitg@gmail.com"}
]
keywords = ["whatsapp", "rpc", "websocket", "json-rpc", "messaging", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/trohitg/edgymeow"
Repository = "https://github.com/trohitg/edgymeow"
Issues = "https://github.com/trohitg/edgymeow/issues"

[tool.setuptools.packages.find]
where = ["."]
